samples/_failures_safe/1761173218_981784_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6df2cedc.c: In function ‘input_matrix’:
./samples/SAFE/__tmp_6df2cedc.c:148:12: error: missing terminating " character
  148 |     printf("Enter matrix elements row by row:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6df2cedc.c:148:5: error: expected expression at end of input
  148 |     printf("Enter matrix elements row by row:\
      |     ^~~~~~
./samples/SAFE/__tmp_6df2cedc.c:148:5: error: expected declaration or statement at end of input
